2.7/manifests/exercises/pingpong/pingpong-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: docker.io/johnd0es/pingpong:3.0
          ports:
            - containerPort: 3000
