2.7/manifests/exercises/pingpong/pingpong-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 3000
      targetPort: 3000
      name: http
