2.7/manifests/exercises/pingpong/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: exercises
  labels:
    app: postgres
spec:
  clusterIP: None
  ports:
    - port: 5432
      name: db
  selector:
    app: postgres
